--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@fontsource/fredoka-one": "^5.0.5"
+		"@fontsource/fredoka-one": "^5.0.5",
+		"@uploadthing/svelte": "^6.6.3",
+		"svelte-headlessui": "^0.0.42",
+		"uploadthing": "^6.13.2"
 	}
 }
